--- a/zsh/config
+++ b/zsh/config
@@ -1,21 +1,24 @@
-if [[ -n $SSH_CONNECTION ]]; then
-  export PS1='%m:%3~$(git_info_for_prompt)%# '
-else
-  export PS1='%3~$(git_info_for_prompt)%# '
-fi
-
-export EDITOR='mate -w'
-export PATH="~/bin:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
-export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
+autoload -U colors
+colors
+setopt prompt_subst
+PROMPT='
+%{$fg[green]%}%~ %{$fg_bold[red]%}$(git_info_for_prompt)
+→ %{$reset_color%}'
 
 fpath=(~/.zsh/functions $fpath)
 
 autoload -U ~/.zsh/functions/*(:t)
 
-HISTFILE=~/.zsh_history
-HISTSIZE=1000
-SAVEHIST=1000
+autoload url-quote-magic
+zle -N self-insert url-quote-magic
+
+# Make CTRL-W delete after other chars, not just spaces
+WORDCHARS=${WORDCHARS//[&=\/;\!#%\{]}
+
+bindkey -e
+
 REPORTTIME=10 # print elapsed time when more than 10 seconds
+LISTMAX=0 # ask to complete if top of list would scroll off screen
 
 setopt NO_BG_NICE # don't nice background tasks
 setopt NO_HUP
